src/test/deca/syntax/invalid/lexer/oracle/float.deca
265451.5164F86511.sdfsdf
65651.68451e
86454.e
155341e.
0x0654651PsdfsF
0X65465.151F
0x65465.151F
0x0654651PsdfsF
0X0654651PsdfsF
0X0654651PsdfsF
0X0654651PsdfsFffffffffffffffff
0X06546.
56454..
4984498.g
